--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="style.css">
         <title> Talha Rahman</title>
     </head>
     
-    <body style="background-color:darkslategray">
+    <body>
         <h1> About Me </h1>
 
         <h2> Backstory </h2>
