moved file to new directory

--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
         <br>
 
         <h2> Current Plight  </h2>
-        <p> I'm an undergraduate student at Hunter College, majoring in Computer Science, because I enjoy trying to figure out 
+        <p> I'm an undergraduate student at Hunter College, majoring in Computer Science, 
+            because I enjoy trying to figure out 
             why my programs refuse to compile.
         </p>
-        <p> You can check out what I am currently trying to debug on my <a href="https://www.github.com/TalhaR">GitHub.</a></p>
+        <p> You can check out what I am currently trying to debug on my <a href="https://www.github.com/TalhaR">GitHub</a>.</p>
         <p> I'm also in the middle of making this website a bit better. </p>
         <br>
 
         <h2> Projects </h2>
         <h4> Calculator</h4>
-        <img src="calc.png">
+        <img src="img/calc.png">
         <p> I wrote this calculator application in Java. The GUI was made with JavaFX. </p>
         <p> I made this because everything I did for my class was command line-based.</p>
         <p> So I decided to learn on my own how to make a GUI.</p>
