--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <h2> Current Plight  </h2>
         <p> I'm an undergraduate student at Hunter College, majoring in Computer Science, 
-            because I enjoy trying to figure out 
+            because I enjoy trying to figure out
             why my programs refuse to compile.
         </p>
         <p> You can check out what I am currently trying to debug on my <a href="https://www.github.com/TalhaR">GitHub</a>.</p>
@@ -23,11 +23,11 @@
 
         <h2> Projects </h2>
         <h4> Calculator</h4>
-        <img src="img/calc.png">
+        <img src="img/calc.png" width = "200" height = "350">
         <p> I wrote this calculator application in Java. The GUI was made with JavaFX. </p>
-        <p> I made this because everything I did for my class was command line-based.</p>
-        <p> So I decided to learn on my own how to make a GUI.</p>
-        <p> This won't be replacing the windows calculator anytime soon, but hey we're getting there.</p>
+        <p> I made this because everything I did for my class was command line-based.
+        <br> So I decided to learn on my own how to make a GUI. This won't be replacing<br> 
+        the windows calculator anytime soon, but hey we're getting there.</p>
         <br>
 
         <h2> Hobbies & Interests </h2>
