--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     </head>
     
     <body>
-        <h1> About Me </h1>
+
+        <ul id="Navigation-Menu">
+            <li><a href="#About">About</a></li>
+            <li><a href="#Contact">Contact</a></li>
+            <li><a href="#Home">Home</a></li>
+        </ul>
+
+        <h1 id="main-header"> About Me </h1>
 
         <h2> Backstory </h2>
         <p> I was born at a very young age. </p>
@@ -23,20 +30,20 @@
 
         <h2> Projects </h2>
         <h4> Calculator</h4>
-        <img src="img/calc.png" width = "200" height = "350">
-        <p> I wrote this calculator application in Java. The GUI was made with JavaFX. </p>
-        <p> I made this because everything I did for my class was command line-based.
-        <br> So I decided to learn on my own how to make a GUI. This won't be replacing<br> 
-        the windows calculator anytime soon, but hey we're getting there.</p>
-        <br>
+        <img src="img/calc.png" alt="My Calculator in Action" style="">
+        <p>I wrote this calculator application in Java. The GUI was made with JavaFX. 
+        I made this because everything I did for my class was command line-based.
+        So, I decided to learn on my own how to make a GUI. This won't be replacing 
+        the windows calculator anytime soon, but we're getting there.</p>
+        
 
         <h2> Hobbies & Interests </h2>
-        <ul>
+        <ul id="list">
             <li> Reddit </li>
             <li> Playing Guitar </li>
             <li> Skateboarding </li>
             <li> Seizing the means of production </li>
-            <li> Taking long walks on the beach </li>
+            <li> Long walks on the beach </li>
         </ul>
     </body>
 </html>
