named a few things

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     
     <body>
 
-        <ul id="Navigation-Menu">
-            <li><a href="#About">About</a></li>
-            <li><a href="#Contact">Contact</a></li>
-            <li><a href="#Home">Home</a></li>
+        <ul id="navigation-menu">
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#home">Home</a></li>
         </ul>
 
         <h1 id="main-header"> About Me </h1>
@@ -28,14 +28,15 @@
         <p> I'm also in the middle of making this website a bit better. </p>
         <br>
 
-        <h2> Projects </h2>
-        <h4> Calculator</h4>
-        <img src="img/calc.png" alt="My Calculator in Action" style="">
-        <p>I wrote this calculator application in Java. The GUI was made with JavaFX. 
-        I made this because everything I did for my class was command line-based.
-        So, I decided to learn on my own how to make a GUI. This won't be replacing 
-        the windows calculator anytime soon, but we're getting there.</p>
-        
+        <h2 id="projects"> Projects </h2>
+        <div style="float:left">
+            <h3> Calculator</h3>
+            <img src="img/calc.png" alt="My Calculator in Action">
+            <p>I wrote this calculator application in Java. The GUI was made with JavaFX. 
+            I made this because everything I did for my class was command line-based.
+            So, I decided to learn on my own how to make a GUI. This won't be replacing 
+            the windows calculator anytime soon, but we're getting there.</p>
+        </div>
 
         <h2> Hobbies & Interests </h2>
         <ul id="list">
