added some meta data

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <link rel="stylesheet" href="style.css">
         <title> Talha Rahman</title>
+        <meta charset="UTF-8">
+        <meta name="author" content="Talha Rahman">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     
     <body>
