added some more meta data

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <meta charset="UTF-8">
         <meta name="author" content="Talha Rahman">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="keywords" content="Personal, Website, HTML, CSS">
+        <meta name="description" content="A Personal Website for Talha Rahman">
     </head>
     
     <body>
