added grid layout

--- a/index.html
+++ b/index.html
@@ -37,16 +37,18 @@
         </div>
         <br>
         
-        <div id="projects" style="float:left">
-            <h2> Projects </h2>
-            <div id="calculator">
-                <h3> Calculator</h3>
+        <h2> Projects </h2>
+        <h3> Calculator</h3>
+        <div id="projects">
+            <div id="calc">
                 <img src="img/calc.png" alt="My Calculator in Action" title="My Calculator in Action">
+            </div>
+            <div id="calc-text">
                 <p>I wrote this calculator application in Java. The GUI was made with JavaFX. 
-                I made this because everything I did for my class was command line-based.
-                It wasn't very interesting to just read text. So, I decided to learn on my own
-                how to make a GUI. This won't be replacing the windows calculator anytime soon, 
-                but we're getting there.</p>
+                    I made this because everything I did for my class was command line-based.
+                    It wasn't very interesting to just read text. So, I decided to learn on my own
+                    how to make a GUI. This won't be replacing the windows calculator anytime soon, 
+                    but we're getting there.</p>
             </div>
             
             <br>
