--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <!-- Reset CSS -->
-        <link rel="stylesheet" href="styles/reset.css" type="text/css">
+        <link rel="stylesheet" href="css/reset.css" type="text/css">
         <!-- Website CSS -->
-        <link rel="stylesheet" href="styles/style.css" type="text/css">
+        <link rel="stylesheet" href="css/style.css" type="text/css">
         
         <title> Talha Rahman</title>
         <meta charset="UTF-8">
