--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                                 "Long walks on the beach"};
                             </p>
                             <p>}</p><br>
-                            <p>String[] getEmail() { </p>
-                            <p>&nbsp;&nbsp; return talha.rahman87@myhunter.cuny.edu </p>
+                            <p>String getEmail() { </p>
+                            <p>&nbsp;&nbsp; return "talha.rahman87@myhunter.cuny.edu"; </p>
                             <p>}</p><br>
                             
                             
