moved orientation of image

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="intro">
                     <p> 
                         Hey! I'm Talha.
-                        I am an aspring Software Engineer
+                        I am an aspring Software Engineer.
                     </p>
                 </div>
                 
