--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <p>&nbsp;&nbsp; return new Date(2021, June);</p>
                             <p>}</p><br>
                             <p>String[] getProgrammingLanguages() { </p>
-                            <p>&nbsp;&nbsp; return {"C++", "Java", "HTML", "CSS", "Javascript"};</p>
+                            <p>&nbsp;&nbsp; return {"C++", "Java", "HTML", "CSS"};</p>
                             <p>}</p><br>
                             <p>String[] getInterests() { </p>
                             <p>&nbsp;&nbsp; return {"Guitar", "Skateboarding", 
@@ -69,22 +69,5 @@
                 
             </aside>
         </div>
-
-        <!-- <h1 id="main-header"> About Me </h1>
-
-        <h2> Backstory </h2>
-        <p> I was born at a very young age. </p>
-        <br>
-
-        <div id="current">
-            <h2> Current Plight  </h2>
-            <p> I'm an undergraduate student at Hunter College, majoring in Computer Science, 
-                because I enjoy trying to figure out
-                why my programs refuse to compile.
-            </p>
-            <p> You can check out what I am, currently, trying to debug on my <a href="https://www.github.com/TalhaR">GitHub</a>.</p>
-            <p> I'm also in the middle of making this website a bit better. </p>
-        </div>
-        -->
     </body>
 </html>
