--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <p>&nbsp;&nbsp; return new Date(2021, June);</p>
                             <p>}</p><br>
                             <p>String[] getProgrammingLanguages() { </p>
-                            <p>&nbsp;&nbsp; return {"C++", "Java", "HTML", "CSS"};</p>
+                            <p>&nbsp;&nbsp; return {"C++", "Java", "Python", "HTML", "CSS", "Javascript"};</p>
                             <p>}</p><br>
                             <p>String[] getInterests() { </p>
                             <p>&nbsp;&nbsp; return {"Guitar", "Skateboarding", 
